[package]
name = "random_number"
version = "0.1.0"
authors = ["Henry Zou <ypzou@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-num = { git = "https://github.com/cfilipescu/magic-num.git", branch = "main"}
rand = "0.5.5"